Removes z-index declaration to avoid covering search results

--- a/client/src/ui/organisms/footer/index.scss
+++ b/client/src/ui/organisms/footer/index.scss
@@ -13,7 +13,6 @@
   color: $text-color-inverted;
   padding: ($base-spacing * 2) $base-spacing;
   position: relative;
-  z-index: $bring-to-front;
 
   .content-container {
     margin: 0 auto;
